<resources>
    <string name="app_name">CollegeProduct</string>
    <string name="college_name">KNOWLEDGE INSTITUTE OF TECHNOLOGY</string>
    <string name="college_logo">appLogo</string>
    <string name="login">Login</string>
    <string name="lock">lockIcon</string>
    <string name="getStarted">Let\'s get started !</string>
    <string name="userId">User Id</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot password ?</string>
    <string name="admissionManagement">Admission Management</string>
    <string name="name">Name</string>
    <string name="registerNo">Register No</string>
    <string name="studentDashBoard">Student DashBoard</string>
    <string name="notifications">Notifications</string>
    <string name="loading">Loading…!</string>
    <string name="profile">Profile</string>
    <string name="rollNo">Roll Number:</string>
    <string name="department">Department:</string>
    <string name="degree">Degree:</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="emailId">Email ID</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="alternativeMobileNumber">Alternative Number</string>
    <string name="address">Address</string>
    <string name="tenthMarkSheet">10th Mark Sheet</string>
    <string name="twelfthMarkSheet">12th Mark Sheet</string>
    <string name="feePay">Fee Pay</string>
    <string name="attendance">Attendance</string>
    <string name="syllabus">Syllabus</string>
    <string name="examTimeTable">Exam TimeTable</string>
    <string name="remarks">Remarks</string>
    <string name="notes">Notes</string>
    <string name="workingDays">Number of Working Days</string>
    <string name="daysPresent">Number of Days Present</string>
    <string name="uploadedOn">Uploaded On</string>
    <string name="examStartDate">Exam Start Date:</string>
    <string name="payNow">Pay Now</string>
    <string name="download">Download</string>
    <string name="feeStatus">Fee Status</string>
    <string name="forgotYourPassword">Forgot Password</string>
    <string name="forgotPasswordContent">Please enter your email to reset the password</string>
    <string name="forgotPasswordEt">Email or Phone</string>
    <string name="continueTv">Continue</string>
    <string name="verify">Verify</string>
    <string name="resetPassword">Reset Password?</string>
    <string name="setPassword">Set a new password</string>
    <string name="updatePassword">Update Password</string>
    <string name="reset">Reset Password</string>
    <string name="resetPasswordContent">Create a new password.Ensure it differs from previous once for security</string>
    <string name="newPassword">New Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="detailOfProfile">Detail of Profile</string>
    <string name="noData">No Data..!</string>
    <string name="reports">Reports</string>
    <string name="departments">Departments</string>
    <string name="StudentReports">Student Reports</string>
    <string name="semester">Semester</string>
    <string name="degreeDropDown">Degree</string>
    <string name="departmentDropDown">Department</string>
    <string name="section">Section</string>
    <string name="view">View</string>
    <string name="viewReports">View Reports</string>
    <string name="select_prompt">Select</string>
    <string name="select_month_prompt">Select Month</string>
    <string name="update">Update</string>
    <string name="upload">Upload</string>
    <string name="chooseFile">Choose File</string>
    <string name="fileName">File Name</string>
    <string name="studentAttendance">Student Attendance</string>
    <string name="professorName">Professor Name</string>
    <string name="todayDate">Today\'s Date</string>
    <string name="present">Present</string>
    <string name="notPresent">Absent</string>
    <string name="total">Total</string>
    <string name="zero">0</string>
    <string name="studentsList">Students List</string>
    <string name="professorAttendance">Professor Attendance</string>
    <string name="attendanceRecap">Attendance Recap</string>
    <string name="attendanceStatus">Attendance Status</string>
    <string name="late">Late</string>
    <string name="schedule">Schedule</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="fromTime">From Time</string>
    <string name="toTime">To Time</string>
    <string name="verification">Verification</string>
    <string name="checkMail">Check Your Mail</string>
    <string name="enterOtp">We have sent OTP to your Mail Id. Please Check Your Mail</string>
    <string name="reSendOtp">Resend Otp</string>
    <string name="search">Search</string>
    <string name="payFees">Pay Fees</string>
    <string name="salary">Salary</string>
    <string name="feeDetails">Fee Detail</string>
    <string name="studentDetails">Student Details</string>
    <string name="profileDetails">Profile Details</string>
    <string name="feeDetail">Fee Details</string>
    <string name="reportDetails">Report Details</string>
    <string name="attendanceDetails">Attendance Details</string>
    <string name="professorDetails">Professor Details</string>
    <string name="professorList">Professor List</string>
    <string name="admissionDegrees">Degrees</string>
    <string name="admissionCourses">Courses</string>
    <string name="admissionApplication">Application Form</string>
    <string name="year">Year:</string>
    <string name="fee">Fee:</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="alterPhone">Alternate Phone</string>
    <string name="submit">Submit</string>
    <string name="results">Results</string>
    <string name="joinMeeting">Join Meeting</string>
    <string name="learningManagement">Learning Management</string>
    <string name="finish">Finish</string>
    <string name="reviewQuestions">Review Questions</string>
    <string name="selectedAns">Selected Answer:</string>
    <string name="transportDetails">Your Transport Details</string>
    <string name="driverName">Driver Name :</string>
    <string name="contactNumber">Contact Number :</string>
    <string name="route">Route :</string>
    <string name="via">Via :</string>
    <string name="summaryResult">Summary Result</string>
    <string name="reviewContent">Review your exam scores..!</string>
    <string name="yourScore">Your Score</string>
    <string name="returnHome">Return to Home</string>
    <string name="welcome_text">Welcome,</string>
    <string name="welcome_text1">Login to Continue</string>
    <string name="notificationsInfo">Notifications Info</string>
    <string name="attendanceInfo">Your Attendance Details</string>
    <string name="professorDepartmentContent">Department Schedule Details Here</string>
    <string name="professorStudentAttendanceContent">Attendance Details Here</string>
    <string name="chooseDegree">Choose Your Degree</string>
    <string name="chooseCourses">Choose Your Course</string>
    <string name="please_wait">Please wait ...</string>
    <string name="yourReports">Your Reports</string>
    <string name="your_exam_results_here">Your Exam Results Here</string>
    <string name="your_exam_time_table_here">Your Exam TimeTable Here</string>
    <string name="your_notes_here">Your Notes Here</string>
    <string name="meetings">Meetings</string>
    <string name="zoom">Zoom</string>
    <string name="google_meet">Google Meet</string>
    <string name="teams">Teams</string>
    <string name="your_fees_payment_details">Your Fees Payment Details</string>
    <string name="date">Date</string>
    <string name="receipt_no">Receipt No</string>
    <string name="transport">Transport</string>
    <string name="course_structure">Course Structure</string>
    <string name="application_content">Please fill out the application form carefully..!</string>
    <string name="professor_attendance_recap">Professor Attendance Recap</string>
    <string name="write_student_reports_here">Write Student Reports Here</string>
    <string name="write_a_report">Write a Report...</string>
    <string name="notes_upload_here">Notes Upload Here</string>
    <string name="choose_file_pdf_here">Choose File PDF Here \n \n or  \n \n browse file from \n device</string>
    <string name="schedule_details_here">Schedule Details Here</string>
    <string name="professor_details_here">Professor Details Here</string>
    <string name="student_details_here">Student Details Here</string>
    <string name="mark_attendance">Mark Attendance -</string>
    <string name="holiday">Holiday...!</string>
    <string name="date_of_join">Date of Join</string>
    <string name="attend_test">Attend Test</string>
    <string name="bus_no">Bus No</string>
</resources>